--- a/netlify-alt.toml
+++ b/netlify-alt.toml
@@ -1,8 +1,7 @@
-# Netlify deployment configuration
+# Alternative Netlify deployment configuration (no base directory)
 [build]
-  base = "frontend"
-  publish = "build"
-  command = "npm run build"
+  publish = "frontend/build"
+  command = "cd frontend && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
